[package]
name = "timeseries-db"
version = "0.1.0"
edition = "2021"
authors = ["SuperInstance"]
description = "High-performance time-series database optimized for real-time metrics and logging"
license = "MIT"
repository = "https://github.com/SuperInstance/timeseries-db"
keywords = ["timeseries", "database", "metrics", "logging", "analytics"]
categories = ["database", "date-and-time"]
readme = "README.md"

[lib]
name = "timeseries_db"
path = "src/lib.rs"

[[bin]]
name = "timeseries-db-cli"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Compression
flate2 = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Metrics and monitoring
prometheus = { version = "0.13", optional = true }

# CLI
clap = { version = "4.4", features = ["derive"], optional = true }

[dev-dependencies]
# Benchmarking
criterion = "0.5"

# Testing
tempfile = "3.8"
proptest = "1.4"

[features]
default = []
metrics = ["prometheus"]
cli = ["clap"]
full = ["metrics", "cli"]

[[bench]]
name = "write_throughput"
harness = false

[[bench]]
name = "query_latency"
harness = false

[[bench]]
name = "compression"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
